docs: modify install target
man page build fails for us since the glob pattern matches none of the files in the directory presumably because they both end with `.md`

Signed-off-by: Danish Prakash <contact@danishpraka.sh>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -19,9 +19,9 @@ docs: $(patsubst %.md,%,$(wildcard *.[0-9].md))
 .PHONY: install
 install:
 	install -d ${DESTDIR}/${MANDIR}/man1
-	install -m 0644 *.1 ${DESTDIR}/${MANDIR}/man1
+	install -m 0644 *.1* ${DESTDIR}/${MANDIR}/man1
 	install -d ${DESTDIR}/${MANDIR}/man7
-	install -m 0644 *.7 ${DESTDIR}/${MANDIR}/man7
+	install -m 0644 *.7* ${DESTDIR}/${MANDIR}/man7
 
 .PHONY: clean
 clean:
